# gossyp

./: Cargo.toml  README.md  test_all.sh
gossyp_base/: Cargo.toml
gossyp_base/src/: environment.rs  lib.rs  tool.rs
gossyp_base/src/basic/: basic_toolset.rs  combined_environment.rs  dynamic_environment_actions.rs  empty_environment.rs  functional_tool.rs  mod.rs  static_environment.rs  tool_name.rs
gossyp_lang/: Cargo.toml
gossyp_lang/src/: lib.rs
gossyp_lang/src/script/: bind_expression.rs  bind_statement.rs  binding_environment.rs  bound_script.rs  evaluate.rs  evaluate_expression.rs  evaluate_statement.rs  mod.rs  parse_script_tool.rs  script.rs  script_interpreter.rs  stateful_eval.rs  syntax_lexer.json  tool.rs
gossyp_toolkit/src/: lib.rs
gossyp_toolkit/src/algorithm/: sort.rs
gossyp_toolkit/src/io/: read_line.rs  shared_stream.rs  tool.rs  write_bytes.rs
src/: environment.rs  lib.rs  main.rs  tool.rs
src/algorithm/: compare.rs  mod.rs  sort.rs  tool.rs
src/basic/: basic_toolset.rs  combined_environment.rs  combined_toolset.rs  dynamic_environment.rs  functional_tool.rs  list_tools.rs  mod.rs  static_environment.rs  tool_name.rs  toolset.rs
src/io/: mod.rs  print.rs  read_line.rs  tool.rs  write_bytes.rs
src/lex/: lex_tool.rs  mod.rs
src/script/: bind_expression.rs  bound_script.rs  evaluate_expression.rs  evaluate_statement.rs  lex_script_tool.rs  mod.rs  parse_script_tool.rs  script.rs  script_interpreter.rs  syntax_lexer.json  tool.rs
