[package]
name    = "silkthread_lang"
version = "0.1.0"
license = "MIT"
authors = ["Andrew Hunter <andrew@logicalshift.io>"]

[dependencies]
serde           = "0.9"
serde_json      = "0.9"
serde_derive    = "0.9"
silkthread_base = { path = '../silkthread_base', version = "0.1.0" }
concordance     = { git = 'https://github.com/Logicalshift/concordance.git' }
