[package]
name    = "silkthread"
version = "0.1.0"
license = "Apache"
authors = ["Andrew Hunter <andrew@logicalshift.io>"]

[dependencies]
serde               = "0.9"
serde_json          = "0.9"
serde_derive        = "0.9"
silkthread_base     = { path = '../silkthread_base', version = "0.1.0" }
silkthread_toolkit  = { path = '../silkthread_toolkit', version = "0.1.0" }
silkthread_lang     = { path = '../silkthread_lang', version = "0.1.0" }
