[package]
name    = "gossyp_lang"
version = "0.1.0"
license = "Apache"
authors = ["Andrew Hunter <andrew@logicalshift.io>"]

[dependencies]
serde           = "1.0"
serde_json      = "1.0"
serde_derive    = "1.0"
lazy_static     = "0.2"
gossyp_base     = { path = '../gossyp_base', version = "0.1.0" }
concordance     = { git = 'https://github.com/Logicalshift/concordance.git' }
